--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   bloc: ^9.1.0
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
+  rxdart: ^0.28.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
